write some need features in separated files

--- a/Lesson6.ipynb
+++ b/Lesson6.ipynb
@@ -84,7 +84,8 @@
     "\n",
     "        for line in tqdm_notebook(inp_json_file):\n",
     "            json_data = read_json_line(line)\n",
-    "            "
+    "            json_data = read_json_line(line)\n",
+    "            [feature_files[i].write(json_data[features[i]] + \";/n\") for i in range(len(feature_files))]"
    ]
   },
   {
@@ -120,6 +121,43 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### to test functions\n",
+    "\n",
+    "features = ['content', 'published', 'title', 'author']\n",
+    "prefix = 'train1' \n",
+    "feature_files = [open(os.path.join(PATH_TO_DATA, \n",
+    "                                   '{}_{}.txt'.format(prefix, feat)), 'w', encoding='utf-8')\n",
+    "                 for feat in features]\n",
+    "\n",
+    "\n",
+    "[feature_files[i].write(features[i] + \";/n\") for i in range(len(feature_files))]\n",
+    "\n",
+    "    \n",
+    "for i in feature_files:\n",
+    "    i.close\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
