--- a/Lesson6.ipynb
+++ b/Lesson6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,32 +65,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract_features_and_write(path_to_data,\n",
     "                               inp_filename, is_train=True):\n",
-    "    \n",
+    "    ident = 0\n",
     "    features = ['content', 'published', 'title', 'author']\n",
     "    prefix = 'train' if is_train else 'test'\n",
     "    feature_files = [open(os.path.join(path_to_data,\n",
     "                                       '{}_{}.txt'.format(prefix, feat)),\n",
-    "                          'w', encoding='utf-8')\n",
+    "                          'w', encoding=\"utf-8\")\n",
+    "                     for feat in features]\n",
+    "    feature_light_files = [open(os.path.join(path_to_data,\n",
+    "                                       '{}_{}_light.txt'.format(prefix, feat)),\n",
+    "                          'w', encoding=\"utf-8\")                     \n",
     "                     for feat in features]\n",
     "    \n",
     "    with open(os.path.join(path_to_data, inp_filename), \n",
     "              encoding='utf-8') as inp_json_file:\n",
-    "\n",
+    "    \n",
     "        for line in tqdm_notebook(inp_json_file):\n",
+    "            dict_data = {}\n",
     "            json_data = read_json_line(line)\n",
-    "            json_data = read_json_line(line)\n",
-    "            [feature_files[i].write(json_data[features[i]]) for i in range(len(feature_files))]"
+    "            for i in range(len(feature_files)):\n",
+    "                dict_data[ident] = json_data[features[i]]\n",
+    "                feature_files[i].write(str(dict_data))\n",
+    "                if (ident < 5000):\n",
+    "                    feature_light_files[i].write(str(dict_data))\n",
+    "            ident += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,13 +108,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc5ce76c2d884151837da43917024e26",
+       "model_id": "2bff57db9ebc46548a113715cb96a0ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -115,26 +124,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "write() argument must be str, not dict",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-35bccc133c44>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mextract_features_and_write\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPATH_TO_DATA\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'train.json'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mis_train\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-7-2838347ca520>\u001b[0m in \u001b[0;36mextract_features_and_write\u001b[1;34m(path_to_data, inp_filename, is_train)\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[0mjson_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mread_json_line\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mline\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m             \u001b[0mjson_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mread_json_line\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mline\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m             \u001b[1;33m[\u001b[0m\u001b[0mfeature_files\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjson_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfeature_files\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-7-2838347ca520>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[0mjson_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mread_json_line\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mline\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m             \u001b[0mjson_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mread_json_line\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mline\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m             \u001b[1;33m[\u001b[0m\u001b[0mfeature_files\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjson_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfeature_files\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: write() argument must be str, not dict"
-     ]
     }
    ],
    "source": [
@@ -143,33 +132,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6c39f531484a4e30a9cf1c4bfabdd2fc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "extract_features_and_write(PATH_TO_DATA, 'test.json', is_train=False)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Add the following groups of features:\n",
+    "\n",
+    "- Tf-Idf with article content (ngram_range=(1, 2), max_features=100000 but you can try adding more)\n",
+    "- Tf-Idf with article titles (ngram_range=(1, 2), max_features=100000 but you can try adding more)\n",
+    "- Time features: publication hour, whether it's morning, day, night, whether it's a weekend\n",
+    "- Bag of authors (i.e. One-Hot-Encoded author names)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "features = ['content', 'published', 'title', 'author']\n",
+    "prefix = ['train', 'test']\n",
+    "files = []\n",
+    "for i in prefix:\n",
+    "   [ files.append(open(os.path.join(PATH_TO_DATA,\n",
+    "                                       '{}_{}_light.txt'.format(i, feat)),\n",
+    "                          'r', encoding=\"utf-8\"))\n",
+    "                     for feat in features]"
+   ]
   },
   {
    "cell_type": "code",
@@ -177,22 +188,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### to test functions\n",
-    "\n",
-    "features = ['content', 'published', 'title', 'author']\n",
-    "prefix = 'train1' \n",
-    "feature_files = [open(os.path.join(PATH_TO_DATA, \n",
-    "                                   '{}_{}.txt'.format(prefix, feat)), 'w', encoding='utf-8')\n",
-    "                 for feat in features]\n",
-    "\n",
-    "\n",
-    "[feature_files[i].write(features[i] + \";/n\") for i in range(len(feature_files))]\n",
-    "\n",
-    "    \n",
-    "for i in feature_files:\n",
-    "    i.close\n",
-    "\n"
+    "df = {} // will be dataframe\n",
+    "with open(os.path.join(files), \n",
+    "              encoding='utf-8') as inp_file:\n",
+    "        for line in tqdm_notebook(inp_file):\n",
+    "            for i in range(len(features)):\n",
+    "                df[features[i]] = "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<_io.TextIOWrapper name='C:\\\\mlcourse\\\\Databases\\\\kaggle_medium\\\\train_content_light.txt' mode='r' encoding='utf-8'>,\n",
+       " <_io.TextIOWrapper name='C:\\\\mlcourse\\\\Databases\\\\kaggle_medium\\\\train_published_light.txt' mode='r' encoding='utf-8'>,\n",
+       " <_io.TextIOWrapper name='C:\\\\mlcourse\\\\Databases\\\\kaggle_medium\\\\train_title_light.txt' mode='r' encoding='utf-8'>,\n",
+       " <_io.TextIOWrapper name='C:\\\\mlcourse\\\\Databases\\\\kaggle_medium\\\\train_author_light.txt' mode='r' encoding='utf-8'>,\n",
+       " <_io.TextIOWrapper name='C:\\\\mlcourse\\\\Databases\\\\kaggle_medium\\\\test_content_light.txt' mode='r' encoding='utf-8'>,\n",
+       " <_io.TextIOWrapper name='C:\\\\mlcourse\\\\Databases\\\\kaggle_medium\\\\test_published_light.txt' mode='r' encoding='utf-8'>,\n",
+       " <_io.TextIOWrapper name='C:\\\\mlcourse\\\\Databases\\\\kaggle_medium\\\\test_title_light.txt' mode='r' encoding='utf-8'>,\n",
+       " <_io.TextIOWrapper name='C:\\\\mlcourse\\\\Databases\\\\kaggle_medium\\\\test_author_light.txt' mode='r' encoding='utf-8'>]"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
