Added link to dataset

--- a/diamonds_DS.ipynb
+++ b/diamonds_DS.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "dataset from Kaggle: https://www.kaggle.com/shivam2503/diamonds"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 202,
    "metadata": {
