--- a/File to learn td-idf.ipynb
+++ b/File to learn td-idf.ipynb
@@ -4,29 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Takes from:\n",
     "http://habrahabr.ru/post/264339/\n",
     "https://habr.com/post/266025/\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.datasets import fetch_20newsgroups"
+    "from sklearn.datasets import fetch_20newsgroups\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,20 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading 20news dataset. This may take a few minutes.\n",
-      "INFO:sklearn.datasets.twenty_newsgroups:Downloading 20news dataset. This may take a few minutes.\n",
-      "Downloading dataset from https://ndownloader.figshare.com/files/5975967 (14 MB)\n",
-      "INFO:sklearn.datasets.twenty_newsgroups:Downloading dataset from https://ndownloader.figshare.com/files/5975967 (14 MB)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "twenty_train = fetch_20newsgroups(subset='train',\n",
     "    categories=categories, shuffle=True, random_state=42)"
@@ -56,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +49,7 @@
        "['alt.atheism', 'comp.graphics', 'sci.med', 'soc.religion.christian']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +60,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sklearn.utils.Bunch"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(twenty_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['data', 'filenames', 'target_names', 'target', 'DESCR', 'description'])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twenty_train.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'From: sd345@city.ac.uk (Michael Collier)\\nSubject: Converting images to HP LaserJet III?\\nNntp-Posting-Host: hampton\\nOrganization: The City University\\nLines: 14\\n\\nDoes anyone know of a good way (standard PC application/PD utility) to\\nconvert tif/img/tga files into LaserJet III format.  We would also like to\\ndo the same, converting to HPGL (HP plotter) files.\\n\\nPlease email any response.\\n\\nIs this the correct group?\\n\\nThanks in advance.  Michael.\\n-- \\nMichael Collier (Programmer)                 The Computer Unit,\\nEmail: M.P.Collier@uk.ac.city                The City University,\\nTel: 071 477-8000 x3769                      London,\\nFax: 071 477-8565                            EC1V 0HB.\\n'"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twenty_train.data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +131,7 @@
        "2257"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +151,7 @@
        "2257"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -151,53 +197,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 3, 3, 3, 3, 3, 2, 2, 2], dtype=int64)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "twenty_train.target[:10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "comp.graphics\n",
-      "comp.graphics\n",
-      "soc.religion.christian\n",
-      "soc.religion.christian\n",
-      "soc.religion.christian\n",
-      "soc.religion.christian\n",
-      "soc.religion.christian\n",
-      "sci.med\n",
-      "sci.med\n",
-      "sci.med\n"
-     ]
-    }
-   ],
-   "source": [
-    "for t in twenty_train.target[:10]:\n",
-    "    print(twenty_train.target_names[t])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -206,8 +205,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 107,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -215,7 +216,7 @@
        "(2257, 35788)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,8 +230,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 108,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -238,7 +241,7 @@
        "4690"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +268,7 @@
        "(2257, 35788)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +291,7 @@
        "(2257, 35788)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,6 +301,314 @@
     "X_train_tfidf = tfidf_transformer.fit_transform(X_train_counts)\n",
     "X_train_tfidf.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Часть II"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "clf = MultinomialNB().fit(X_train_tfidf, twenty_train.target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'God is love' => soc.religion.christian\n",
+      "'OpenGL on the GPU is fast' => comp.graphics\n"
+     ]
+    }
+   ],
+   "source": [
+    "docs_new = ['God is love', 'OpenGL on the GPU is fast']\n",
+    "X_new_counts = count_vect.transform(docs_new)\n",
+    "X_new_tfidf = tfidf_transformer.transform(X_new_counts)\n",
+    "predicted = clf.predict(X_new_tfidf)\n",
+    "for doc, category in zip(docs_new, predicted):\n",
+    "    print('%r => %s' % (doc, twenty_train.target_names[category]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ">>> from sklearn.pipeline import Pipeline\n",
+    ">>> text_clf = Pipeline([('vect', CountVectorizer()),\n",
+    "                      ('tfidf', TfidfTransformer()),\n",
+    "                      ('clf', MultinomialNB()),\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_clf = text_clf.fit(twenty_train.data, twenty_train.target)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Оценка производительности при работе на тестовой выборке"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8348868175765646"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "twenty_test = fetch_20newsgroups(subset='test',\n",
+    "     categories=categories, shuffle=True, random_state=42)\n",
+    "docs_test = twenty_test.data\n",
+    "predicted = text_clf.predict(docs_test)\n",
+    "np.mean(predicted == twenty_test.target)        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\stochastic_gradient.py:117: DeprecationWarning: n_iter parameter is deprecated in 0.19 and will be removed in 0.21. Use max_iter and tol instead.\n",
+      "  DeprecationWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9127829560585885"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import SGDClassifier\n",
+    "text_clf = Pipeline([('vect', CountVectorizer()),\n",
+    "                      ('tfidf', TfidfTransformer()),\n",
+    "                      ('clf', SGDClassifier(loss='hinge', penalty='l2',\n",
+    "                                            alpha=1e-3, n_iter=5, random_state=42)),\n",
+    "    ])\n",
+    "_ = text_clf.fit(twenty_train.data, twenty_train.target)\n",
+    "predicted = text_clf.predict(docs_test)\n",
+    "np.mean(predicted == twenty_test.target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                        precision    recall  f1-score   support\n",
+      "\n",
+      "           alt.atheism       0.95      0.81      0.87       319\n",
+      "         comp.graphics       0.88      0.97      0.92       389\n",
+      "               sci.med       0.94      0.90      0.92       396\n",
+      "soc.religion.christian       0.90      0.95      0.93       398\n",
+      "\n",
+      "           avg / total       0.92      0.91      0.91      1502\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "print(metrics.classification_report(twenty_test.target, predicted,\n",
+    "target_names=twenty_test.target_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[258,  11,  15,  35],\n",
+       "       [  4, 379,   3,   3],\n",
+       "       [  5,  33, 355,   3],\n",
+       "       [  5,  10,   4, 379]], dtype=int64)"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.confusion_matrix(twenty_test.target, predicted)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.grid_search import GridSearchCV\n",
+    "parameters = {'vect__ngram_range': [(1, 1), (1, 2)],\n",
+    "              'tfidf__use_idf': (True, False),\n",
+    "              'clf__alpha': (1e-2, 1e-3),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gs_clf = GridSearchCV(text_clf, parameters, n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\stochastic_gradient.py:117: DeprecationWarning: n_iter parameter is deprecated in 0.19 and will be removed in 0.21. Use max_iter and tol instead.\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "gs_clf = gs_clf.fit(twenty_train.data[:400], twenty_train.target[:400])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'soc.religion.christian'"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twenty_train.target_names[gs_clf.predict(['God is love'])[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "clf__alpha: 0.001\n",
+      "tfidf__use_idf: True\n",
+      "vect__ngram_range: (1, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_parameters, score, _ = max(gs_clf.grid_scores_, key=lambda x: x[1])\n",
+    "for param_name in sorted(parameters.keys()):\n",
+    "    print(\"%s: %r\" % (param_name, best_parameters[param_name]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
