Added division publications by hour, whether it's morning, day, night

--- a/Lesson6.ipynb
+++ b/Lesson6.ipynb
@@ -16,6 +16,7 @@
     "import os\n",
     "import codecs\n",
     "import json\n",
+    "import seaborn as sns\n",
     "from tqdm import tqdm_notebook\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,11 +92,7 @@
     "                                       '{}_{}.txt'.format(prefix, feat)),\n",
     "                          'w', encoding=\"utf-8\")\n",
     "                     for feat in features]\n",
-    "    feature_light_files = [open(os.path.join(path_to_data,\n",
-    "                                       '{}_{}_light.txt'.format(prefix, feat)),\n",
-    "                          'w', encoding=\"utf-8\")                     \n",
-    "                     for feat in features]\n",
-    "    \n",
+    " \n",
     "    with open(os.path.join(path_to_data, inp_filename), \n",
     "              encoding='utf-8') as inp_json_file:\n",
     "    \n",
@@ -105,18 +102,14 @@
     "            for i in range(len(feature_files)):\n",
     "                dict_data[ident] = json_data[features[i]]\n",
     "                feature_files[i].write(str(dict_data) + '\\n')\n",
-    "                if (ident < 5000):\n",
-    "                    feature_light_files[i].write(str(dict_data) + '\\n')\n",
     "            ident += 1\n",
-    "    for i in feature_light_files:\n",
-    "        i.close()\n",
     "    for i in feature_files:\n",
     "        i.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,13 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d1dcb7416c348a3b1d72ea64b133afa",
+       "model_id": "89486bc1e6c64596adac696143363825",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,13 +149,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e5fbe10ff46433db967b73af00d5117",
+       "model_id": "ecb47d40457843808d7706efe934b969",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,13 +200,13 @@
     "features = ['content', 'published', 'title', 'author']\n",
     "\n",
     "l_files = [os.path.join(PATH_TO_DATA,\n",
-    "                                       '{}_{}_light.txt'.format(prefix, feat))   \n",
+    "                                       '{}_{}.txt'.format(prefix, feat))   \n",
     "                     for feat in features]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -222,7 +215,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 31.5 s\n"
+      "Wall time: 0 ns\n",
+      "Wall time: 0 ns\n",
+      "Wall time: 0 ns\n",
+      "Wall time: 0 ns\n",
+      "Wall time: 7min 26s\n"
      ]
     }
    ],
@@ -238,7 +235,15 @@
     "        arr.append(list(eval(line[:-2]).values())[0])\n",
     "    f.close()\n",
     "    ser_buf = pd.Series(arr)\n",
-    "    df[features[k]] = ser_buf\n",
+    "    df[features[k]] = ser_buf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df['content'] = df['content'].map(strip_tags)    "
    ]
   },
@@ -251,9 +256,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>content</th>\n",
+       "      <th>published</th>\n",
+       "      <th>title</th>\n",
+       "      <th>author</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Medium Everyone’s stories and ideas Aug 13, 20...</td>\n",
+       "      <td>{'$date': '2012-08-13T22:54:53.510Z'}</td>\n",
+       "      <td>Medium Terms of Service – Medium Policy – Medium</td>\n",
+       "      <td>{'name': None, 'url': 'https://medium.com/@Med...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Medium Everyone’s stories and ideas Aug 2, 201...</td>\n",
+       "      <td>{'$date': '2015-08-03T07:44:50.331Z'}</td>\n",
+       "      <td>Amendment to Medium Terms of Service Applicabl...</td>\n",
+       "      <td>{'name': None, 'url': 'https://medium.com/@Med...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Yun-Chen Chien（簡韻真） Nobody in @g0v.tw, PM in s...</td>\n",
+       "      <td>{'$date': '2017-02-05T13:08:17.410Z'}</td>\n",
+       "      <td>走入山與海之間：閩東大刀會和兩岸走私 – Yun-Chen Chien（簡韻真） – Medium</td>\n",
+       "      <td>{'name': None, 'url': 'https://medium.com/@ael...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Vaibhav Khulbe Android App Developer | I write...</td>\n",
+       "      <td>{'$date': '2017-05-06T08:16:30.776Z'}</td>\n",
+       "      <td>How fast can a camera get? – What comes to min...</td>\n",
+       "      <td>{'name': None, 'url': 'https://medium.com/@vai...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Vaibhav Khulbe Android App Developer | I write...</td>\n",
+       "      <td>{'$date': '2017-06-04T14:46:25.772Z'}</td>\n",
+       "      <td>A game for the lonely fox – What comes to mind...</td>\n",
+       "      <td>{'name': None, 'url': 'https://medium.com/@vai...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             content  \\\n",
+       "0  Medium Everyone’s stories and ideas Aug 13, 20...   \n",
+       "1  Medium Everyone’s stories and ideas Aug 2, 201...   \n",
+       "2  Yun-Chen Chien（簡韻真） Nobody in @g0v.tw, PM in s...   \n",
+       "3  Vaibhav Khulbe Android App Developer | I write...   \n",
+       "4  Vaibhav Khulbe Android App Developer | I write...   \n",
+       "\n",
+       "                               published  \\\n",
+       "0  {'$date': '2012-08-13T22:54:53.510Z'}   \n",
+       "1  {'$date': '2015-08-03T07:44:50.331Z'}   \n",
+       "2  {'$date': '2017-02-05T13:08:17.410Z'}   \n",
+       "3  {'$date': '2017-05-06T08:16:30.776Z'}   \n",
+       "4  {'$date': '2017-06-04T14:46:25.772Z'}   \n",
+       "\n",
+       "                                               title  \\\n",
+       "0   Medium Terms of Service – Medium Policy – Medium   \n",
+       "1  Amendment to Medium Terms of Service Applicabl...   \n",
+       "2  走入山與海之間：閩東大刀會和兩岸走私 – Yun-Chen Chien（簡韻真） – Medium   \n",
+       "3  How fast can a camera get? – What comes to min...   \n",
+       "4  A game for the lonely fox – What comes to mind...   \n",
+       "\n",
+       "                                              author  \n",
+       "0  {'name': None, 'url': 'https://medium.com/@Med...  \n",
+       "1  {'name': None, 'url': 'https://medium.com/@Med...  \n",
+       "2  {'name': None, 'url': 'https://medium.com/@ael...  \n",
+       "3  {'name': None, 'url': 'https://medium.com/@vai...  \n",
+       "4  {'name': None, 'url': 'https://medium.com/@vai...  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
@@ -265,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,85 +381,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating the columns date and time"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pub_to_time(publicate):\n",
+    "    return publicate[11:-5]\n",
+    "\n",
+    "def pub_to_date(publicate):\n",
+    "    return publicate[:10] \n",
+    "\n",
+    "def time_to_sec(time_s):\n",
+    "    return ((int(time_s[:2])* 60 * 60) + (int(time_s[3:5])) * 60 + (int(time_s[6:])))\n",
+    "\n",
+    "# may be need other division\n",
+    "def sec_to_tofd(time_sec):\n",
+    "    x = 3600\n",
+    "    if(time_sec > 18 * x):\n",
+    "        return 'E'\n",
+    "    elif(time_sec > 12 * x):\n",
+    "        return 'D'\n",
+    "    elif(time_sec > 6 * x):\n",
+    "        return 'M'\n",
+    "    else:\n",
+    "        return 'N'\n",
+    "    \n",
+    "def day_of_week(date):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['date'] = df['published'].map(pub_to_date)\n",
+    "df['time'] = df['published'].map(pub_to_time)\n",
+    "df['time_sec'] = df['time'].map(time_to_sec)\n",
+    "df['time_of_day'] = df['time_sec'].map(sec_to_tofd)\n",
+    "df['week_day'] = df['date'].map(day_of_week)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       2012-08-13T22:54:53.510Z\n",
-       "1       2015-08-03T07:44:50.331Z\n",
-       "2       2017-02-05T13:08:17.410Z\n",
-       "3       2017-05-06T08:16:30.776Z\n",
-       "4       2017-06-04T14:46:25.772Z\n",
-       "5       2017-04-02T16:21:15.171Z\n",
-       "6       2016-08-15T04:16:02.103Z\n",
-       "7       2015-01-14T21:31:07.568Z\n",
-       "8       2014-02-11T04:11:54.771Z\n",
-       "9       2015-10-25T02:58:05.551Z\n",
-       "10      2016-08-15T15:31:13.601Z\n",
-       "11      2016-08-09T21:01:06.303Z\n",
-       "12      2016-09-08T15:47:57.336Z\n",
-       "13      2016-09-30T18:05:35.950Z\n",
-       "14      2017-06-27T15:49:22.909Z\n",
-       "15      2015-07-13T06:52:44.618Z\n",
-       "16      2017-05-01T13:22:43.785Z\n",
-       "17      2016-08-31T17:11:24.263Z\n",
-       "18      2017-06-30T07:55:55.103Z\n",
-       "19      2016-12-13T23:29:35.556Z\n",
-       "20      2016-01-27T22:19:05.027Z\n",
-       "21      2016-12-14T01:15:02.122Z\n",
-       "22      2016-09-05T22:02:40.326Z\n",
-       "23      2016-12-13T17:59:40.527Z\n",
-       "24      2017-05-02T17:28:39.120Z\n",
-       "25      2016-08-30T23:43:24.940Z\n",
-       "26      2017-04-26T02:50:29.511Z\n",
-       "27      2016-06-18T06:54:10.331Z\n",
-       "28      2016-05-17T17:52:00.960Z\n",
-       "29      2017-04-17T16:29:28.306Z\n",
-       "                  ...           \n",
-       "4970    2015-11-16T00:27:29.401Z\n",
-       "4971    2015-11-30T00:00:28.639Z\n",
-       "4972    2015-12-02T02:43:53.010Z\n",
-       "4973    2015-07-29T22:07:02.697Z\n",
-       "4974    2015-09-22T15:46:05.538Z\n",
-       "4975    2015-10-21T21:01:05.812Z\n",
-       "4976    2016-10-28T14:14:51.342Z\n",
-       "4977    2015-01-22T01:49:32.006Z\n",
-       "4978    2016-09-26T07:20:47.629Z\n",
-       "4979    2017-01-22T13:01:11.777Z\n",
-       "4980    2015-06-01T15:00:17.104Z\n",
-       "4981    2015-06-07T22:05:04.336Z\n",
-       "4982    2015-05-16T18:03:10.181Z\n",
-       "4983    2015-09-23T14:56:59.825Z\n",
-       "4984    2016-08-07T23:20:06.617Z\n",
-       "4985    2015-01-10T18:09:09.351Z\n",
-       "4986    2015-08-01T06:49:09.925Z\n",
-       "4987    2016-07-09T07:55:30.600Z\n",
-       "4988    2016-10-22T20:20:14.982Z\n",
-       "4989    2016-01-29T13:02:16.808Z\n",
-       "4990    2017-02-16T17:10:43.196Z\n",
-       "4991    2017-04-10T20:23:52.007Z\n",
-       "4992    2017-05-06T13:31:50.204Z\n",
-       "4993    2017-04-23T04:48:41.632Z\n",
-       "4994    2017-06-13T13:55:19.796Z\n",
-       "4995    2017-06-01T01:04:51.058Z\n",
-       "4996    2016-06-11T04:36:01.706Z\n",
-       "4997    2016-03-18T15:55:31.865Z\n",
-       "4998    2015-11-03T16:58:16.277Z\n",
-       "4999    2015-10-27T13:12:53.227Z\n",
-       "Name: published, Length: 5000, dtype: object"
+       "D    22938\n",
+       "E    18693\n",
+       "M    10913\n",
+       "N     9769\n",
+       "Name: time_of_day, dtype: int64"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['published']"
+    "df['time_of_day'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
